global.css
@import "Inter/font-face.css";

:root {
  --unit: 32px;

  --bg: #fafafa;
  --text: #111;
  --yellow: #fdfe45;
  --accent: #ff14a9;
  --pink: #ff57d7;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

html {
  font-family: "Inter", sans-serif;
  font-feature-settings: "calt";
  font-size: 20px;
}

@supports (font-variation-settings: normal) {
  html {
    font-family: "Inter var", sans-serif;
  }
}

body {
  --frame: var(--unit);
  position: relative;
  background: var(--bg);
}

::selection {
  background: var(--accent);
  color: var(--bg);
  text-shadow: none;
}

/* LOGO */

.logo {
  position: absolute;
  top: var(--frame);
  left: var(--frame);
  color: var(--text);
  outline: none;
}

.logo svg {
  fill: none;
}

.logo circle {
  fill: currentColor;
  transition: all ease-in 0.1s;
}

.logo path {
  fill: var(--bg);
}

.logo:hover circle,
.logo:focus-visible circle {
  fill: var(--accent);
  filter: blur(0.5px);
}

.logo:hover path,
.logo:focus-visible path {
  fill: var(--text);
}

/* MAIN */

main {
  position: absolute;
  top: calc(20vh - var(--unit));
  left: var(--unit);
  width: calc(84vw - calc(var(--unit) * 2));
  height: 80%;
  display: flex;
  align-items: center;
  font-size: min(7vw, 9vh);
  font-weight: 300;
  line-height: 1.4em;
  overflow: hidden;
}

p {
  margin: 0;
  color: var(--text);
  letter-spacing: -0.01em;
  text-shadow: 0 0 1em var(--bg);
}

p > span {
  font-weight: 400;
}

p > span > span,
.squiggly {
  font-weight: 500;
}

p > span > span > span,
.squiggly > span {
  font-weight: 600;
}

p > span > span > span > span,
.squiggly > span > span {
  font-weight: 700;
  font-weight: 650;
}

a.squiggly {
  color: currentColor;
  outline: none;
  text-decoration: underline wavy var(--yellow) 2px;
  transition: all ease-out 0.3s;
}

a.squiggly:hover,
a.squiggly:focus-visible {
  text-decoration-color: var(--pink);
}

a.arrow {
  display: inline-block;
  margin-top: 0.25em;
  color: var(--pink);
  font-weight: 500;
  text-decoration: none;
  outline: none;
}

a.arrow > span {
  color: var(--text);
  font-weight: 300;
  transition: all ease-in 0.2s;
}

a.arrow:hover span,
a.arrow:focus-visible span {
  font-weight: 500;
  word-spacing: 0.1em;
  margin-right: 0.3em;
  color: var(--pink);
}

/* SIDE LINKS */

.links {
  position: absolute;
  right: var(--frame);
  text-align: right;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.links.top {
  top: calc(var(--frame) - 28px);
}

.links.bottom {
  bottom: calc(var(--frame) - 28px);
}

.links a {
  height: 48px;
  box-sizing: border-box;
  margin-bottom: 16px;
  padding: 32px 0 0;
  line-height: 16px;
  font-size: 16px;
  font-weight: 300;
  color: var(--text);
  outline: none;
  text-decoration: none;
  cursor: pointer;
}

.links a:last-of-type {
  margin: 0;
  padding: 0 0 32px;
}

.links a.fat,
.links a.fat {
  font-weight: 500;
}

.links a::before {
  content: "•";
  color: transparent;
  transition: all ease-in 0.2s;
}

.links a:hover::before,
.links a:focus::before {
  color: var(--accent);
}

/* BLOBS */

.blobs {
  --duration: 40s;
  --range: min(40vw, 40vh);
  --size: min(50vw, 50vh);
  position: absolute;
  top: 20vh;
  left: 40vw;
  width: var(--size);
  height: var(--size);
  border-radius: 50%;
  overflow: hidden;
  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 1024 1024' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.25' numOctaves='1' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
}

.blobs > div {
  position: absolute;
  top: 5vh;
  left: -2vw;
  width: var(--size);
  height: var(--size);
  border-radius: 50%;
  filter: blur(calc(var(--size) / 4));
}

.blob-1 {
  --size: min(50vw, 50vh);
  background: var(--yellow);
  animation: blob-1 var(--duration) linear infinite;
}

.blob-2 {
  --size: min(40vw, 40vh);
  top: -5vh;
  left: 0;
  background: var(--accent);
  filter: blur(calc(var(--size) / 3));
  animation: blob-2 var(--duration) linear infinite;
  opacity: 0.75;
}

.blob-3 {
  --size: min(35vw, 35vh);
  background: var(--pink);
  animation: blob-3 var(--duration) linear infinite;
  opacity: 0.75;
}

/* MEDIA */

@media (prefers-color-scheme: dark) {
  :root {
    --bg: #111;
    --text: #fafafa;
  }
}

@media all and (min-width: 768px) {
  main {
    left: calc(var(--unit) * 2);
  }
}

@media screen and (orientation: landscape) {
  body {
    --frame: calc(var(--unit) * 1.5);
  }

  main {
    line-height: 1.3;
    left: calc(var(--unit) * 4);
  }

  a.squiggly {
    text-decoration-thickness: 5px;
  }

  .links a {
    font-size: 20px;
    margin-bottom: 24px;
  }

  .blobs {
    top: 20vh;
    left: 60vw;
  }
}

/* KEYFRAMES */

@keyframes blob-1 {
  33% {
    transform: translate(calc(var(--range) * 0.9), calc(var(--range) * -0.25));
  }
  66% {
    transform: translate(calc(var(--range) * 0.8), calc(var(--range) * -0.5));
  }
}

@keyframes blob-2 {
  33% {
    transform: translate(calc(var(--range) * 0.5), calc(var(--range) * 0.3));
  }
  66% {
    transform: translate(calc(var(--range) * 0.3), calc(var(--range) * 0.1));
  }
}

@keyframes blob-3 {
  33% {
    transform: translate(calc(var(--range) * 0.3), calc(var(--range) * -0.2));
  }
  66% {
    transform: translate(calc(var(--range) * 0.9), calc(var(--range) * -0.7));
  }
}

